--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-dismissable-layer": "^1.1.2",
     "@radix-ui/react-slot": "1.1.1",
+    "@radix-ui/react-visually-hidden": "^1.1.1",
     "class-variance-authority": "0.7.1",
     "clsx": "^2.1.1",
     "lodash": "^4.17.21",
@@ -33,7 +34,11 @@
     "autoprefixer": "^10.4.20",
     "eslint": "8",
     "eslint-config-next": "14.2.18",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-prettier": "^5.2.3",
     "postcss": "^8.4.49",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^3.4.16",
     "typescript": "5.6.3"
   }
